# NEAT

./: .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  CMakeLists.txt  CMakeLists_potential_new.txt  Dockerfile.NEAT  README.md  cmake_config_file.json  inputs.py  inputs.toml  pyproject.toml  requirements.txt  run_autopep  run_tests  setup.cfg  setup.py  tox.ini  wout_nearaxis_sboundary9.093522647265901_TRY_000_000000.nc
.github/workflows/: ci.yml  codestyle.yml  docker.yml  linting.yml  pypi.yml
ci/: test.yml
cmake_config_files/: marconi.json  ubuntu-ci.json  ubuntu.json
docker/: Dockerfile.NEAT  docker-entrypoint.sh
docs/: README.md  requirements.txt
docs/source/: conf.py  containers.rst  contributing.rst  cpp.rst  example_loss_fraction.rst  example_optimize.rst  example_plot.rst  getting_started.rst  index.rst  installation.rst  neat.rst  overview.rst  publications.rst  source.rst  testing.rst
docs/source/_static/css/: equation_numbers.css
examples/: README.md  calculate_loss_fraction.py  calculate_loss_fraction_qi.py  calculate_loss_fraction_qs.py  calculate_loss_fraction_simple.py  calculate_loss_fraction_vmec+qs.py  calculate_loss_fraction_vmec.py  calculate_loss_fraction_vmec_loss.py  input.nearaxis  loss_fraction.py  loss_fraction_simple.py  mercier.nearaxis  optimization.py  optimize_loss_fraction.py  optimize_loss_fraction_qi.py  optimize_loss_fraction_qs.py  optimize_loss_fraction_vmec.py  parvmecinfo.txt  plot_simple.py  plot_single_orbit.py  plot_single_orbit_beams3d.py  plot_single_orbit_booz.py  plot_single_orbit_dommaschk.py  plot_single_orbit_qi.py  plot_single_orbit_qs.py  plot_single_orbit_simple.py  plot_single_orbit_simsopt.py  plot_single_orbit_simsopt_na.py  plot_single_orbit_simsopt_vmec.py  plot_single_orbit_vmec.py  plot_single_orbit_vmec_interp3D.py  single_orbit.py  test.py  threed1.nearaxis  timings.txt  vmectrace.py  wout_nearaxis.nc
examples/inputs/: in_booz.W7-X  input.W7-X  input.W7X  wout_ARIESCS.nc  wout_ESTELL.nc  wout_ITER.nc
examples/misc/: Amplitude_Formula.ipynb  Integrators_tests.ipynb  Trapped_Formula.ipynb  VMECvsSIMPLE_Benchmark.py  calculate_loss_fraction_qs_ARIESCS.py  calculate_loss_fraction_vmec+qs.py  initial_positions_single_qs_vmec.ipynb  input.nearaxis  input.nearaxis_sboundary0.01  input.nearaxis_sboundary0.1  input.nearaxis_sboundary0.11  input.nearaxis_sboundary0.2  input.nearaxis_sboundary0.9  input.nearaxis_sboundary1  mercier.nearaxis  mercier.nearaxis_sboundary0.01  mercier.nearaxis_sboundary0.1  mercier.nearaxis_sboundary0.11  mercier.nearaxis_sboundary0.2  mercier.nearaxis_sboundary0.9  parvmecinfo.txt  plot_single_orbit_booz.py  plot_single_orbit_qs_vmec.py  plot_single_orbit_qs_vmec_desc.py  plot_single_qs_QA.ipynb  plot_single_qs_desc.py  plot_single_qs_from_vmec.ipynb  plot_single_qs_vmec.ipynb  scan_QSC_orbits.py  scan_QSC_orbits_multiprocess.py  test.py  threed1.nearaxis  threed1.nearaxis_sboundary0.01  threed1.nearaxis_sboundary0.1  threed1.nearaxis_sboundary0.11  threed1.nearaxis_sboundary0.2  threed1.nearaxis_sboundary0.9  threed1.nearaxis_sboundary1  timings.txt  wout_nearaxis.nc  (+28 more)
examples/misc/Thesis_Equilibria/DESC Equilibria/: input.nearaxis_sboundary1.0_desc  wout_final_freeb.nc  wout_nearaxis_sboundary0.5_desc.nc  wout_nearaxis_sboundary9.093522647265901_desc.nc
examples/misc/Thesis_Equilibria/Matt's Equilibria/: wout_Matt_nfp4_QH.nc  wout_Matt_nfp4_QH_rescaled.nc
examples/misc/Thesis_Equilibria/VMEC Equilibria/: wout_nearaxis_13.64_000_000000.nc  wout_nearaxis_6.82_QA_000_000000.nc  wout_nearaxis_9.09_000_000000.nc
src/: NEAT.cc  NEAT.cpp  NEAT_Mercier.cc  NEAT_Mercier.py  functions.py  inputs.py  inputs_default.py  main.py  plotting.py  verify_metric.py
src/NEATpp/: NEAT.cc  NEAT_Mercier.py  NEAT_openmp.cc
src/fields_NEAT/: equilibrium_stellna_qs.cc  equilibrium_stellna_qs.hh
src/metrics_NEAT/: metric_stellna_qs.cc
src/neat/: __init__.py  beams3D.py  beams3d.py  constants.py  fffi.py  fields.py  functions.py  grammar.tx  main.py  objectives.py  plot.py  plotting.py  stell_repo.py  test_plotting.py  tracing.py  tracing_simsopt.py  vmectrace.py
src/neat/gyronimo/: fields.py  tracing.py
src/neat/output/: _simple.c  tracing_simple.py  wout.nc
src/neat/util/: NEAT_Mercier.py  constants.py  functions.py  main.py  plotting.py  stell_repo.py
src/neatf90/: CMakeLists.txt  neatf90.f90  neatf90.pyf  test_neatf90.py
src/neatpp/: NEAT_Mercier.cc  NEAT_Mercier.py  NEAT_openmp.cc  booztrace.hh  dommaschktrace.hh  ensemble.cc  neatpp.cpp  neatpp.hh  neatpp_profiling.cpp  stellna.hh  vmec_loss.hh  vmectrace.cc  vmectrace.hh  vmectrace_interp3D.hh  vmectrace_stell.cc  vmectrace_stell_new.cc
src/neatpp/fields_NEAT/: equilibrium_boozxform.cc  equilibrium_boozxform.hh  equilibrium_boozxform_old.cc  equilibrium_boozxform_old.hh  equilibrium_dommaschk.cc  equilibrium_dommaschk.hh  equilibrium_stellna.cc  equilibrium_stellna.hh  equilibrium_stellna_qs.cc  equilibrium_stellna_qs.hh  equilibrium_stellna_qs_partial.cc  equilibrium_stellna_qs_partial.hh  equilibrium_vmec_interp3D.cc  equilibrium_vmec_interp3D.hh  equilibrium_vmec_optimized.cc  equilibrium_vmec_optimized.hh
src/neatpp/metrics_NEAT/: metric_boozxform.cc  metric_boozxform.hh  metric_boozxform_old.cc  metric_boozxform_old.hh  metric_cylindrical.cc  metric_cylindrical.hh  metric_spec.cc  metric_stellna.cc  metric_stellna.hh  metric_stellna_qs.cc  metric_stellna_qs.hh  metric_stellna_qs_partial.cc  metric_stellna_qs_partial.hh  metric_vmec_interp3D copy.cc  metric_vmec_interp3D copy.hh  metric_vmec_interp3D.cc  metric_vmec_interp3D.hh  metric_vmec_optimized.cc  metric_vmec_optimized.hh
src/neatpp/parsers_NEAT/: parser_boozxform.cc  parser_boozxform.hh
src/slim/: NEAT.cpp  NEAT.py
tests/: NEAT_with_metric.cc  plotting.py  test_energy_and_angular_momentum.py  test_fields.py  test_fields_inacio.py  test_objectives.py  test_openmp_stellna.cc  test_optimization.py  test_particle_tracing.py  test_plotting.py  test_tracing.py  verify_metric.py
tests/gyronimo/: test_fields.py  test_particle_tracing.py
(+11 files in other folders)
