[metadata]
name = neatstel
version = 0.1
license = GPL-3.0
description = Optimization of near-axis magnetic fields
long_description = file: README.md
long_description_content_type = text/markdown
author = EUROfusion Enabling Research Team ENR-IST-MOD-01 2022
author_email = rogerio.jorge@tecnico.ulisboa.pt
url = https://github.com/rogeriojorge/NEAT
classifiers=
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Environment :: Console
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    plasma physics
    plasma
    magnetohydrodynamics
    mhd
    nuclear fusion reactor
    fusion
    stellarator
    vmec
    simple
    pybind
    optimization

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    matplotlib
    numpy
    scipy
    qsc
    qicna
    setuptools
    pybind11
    textx

[options.extras_require]
DOCS =
    sphinx
    sphinx-rtd-theme
    sphinxcontrib-napoleon
    sphinx-autodoc-napoleon-typehints

[options.packages.find]
where=
    src
